Websocket is working with chatgpt

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="title">实时聊天室</div>
   <div class="input-box">
    <input class="input" placeholder="你想说什么..." type="text" id="pl" onkeydown="keyenter()" />
-   <div class="send" id="submit">发送</div>
+   <div class="send" id="submit" onclick="sendMessage()">发送</div>
   </div>
   <div class="view" id="ulview">
    <ul id="view"></ul>
